--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-player": "^2.16.0",
     "react-window": "^1.8.11",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
